--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ border:1px solid;
     width:100%;
     height:100%;
 }
+.otherScreen {
+    border:2px solid #aaaaff;
+    position:absolute;
+    width:100%;
+    height:100%;
+}
