--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 #gameArea {
-position:absolute;
-left:50%;
-top:50%;
-border:1px solid;
+    position    :   absolute;
+    left        :   50%;
+    top         :   50%;
+    border      :   1px solid;
+    -webkit-perspective :   200px;
+    -webkit-perspective-origin :   200px 100px;
+    -webkit-animation : zoomIn 1s linear 1;
+}
+
+@-webkit-keyframes zoomIn {
+    0% { -webkit-transform: scale(0.2) }
+    0% { -webkit-transform: rotate3d(0, 1, 1, -180deg) }
+    100% { -webkit-transform: scale(1.0) }
 }
 
 .gameScreen {
@@ -18,7 +27,10 @@ border:1px solid;
     position:absolute;
     width:100%;
     height:100%;
+    -webkit-transform-origin :   200px 100px;
+    -webkit-transform   :   rotateY(30deg);
 }
+
 .otherScreen {
     border:2px solid #aaaaff;
     position:absolute;
