--- a/style.css
+++ b/style.css
@@ -6,14 +6,7 @@ border:1px solid;
 }
 
 .gameScreen {
-    background: rgb(228,245,252); /* Old browsers */
-    background: -moz-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%, rgba(153,209,255,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(228,245,252,1)), color-stop(100%,rgba(153,209,255,1))); /* Chrome,Safari4+ */
-    background: -webkit-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* Opera 12+ */
-    background: -ms-radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* IE10+ */
-    background: radial-gradient(center, ellipse cover,  rgba(228,245,252,1) 0%,rgba(153,209,255,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4f5fc', endColorstr='#99d1ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: #000;
     border:2px solid #aaaaff;
     position:absolute;
     width:100%;
