--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@
 }
 
 #profileDiv {
-    background: rgba(100, 100, 200, 0.6);
+    /*/background: rgba(100, 100, 200, 0.6);*/
     border-radius: 12px;
-    width: 20%;
+    width: 7%;
     height: 8%;
     padding: 1%;
     top: 65%;
@@ -35,7 +35,7 @@
 }
 
 .socialIcon {
-    width: 30%;
+    width: 80%;
     height: 98%;
     padding-left: 10%;
 }
