minor fiexes; added icons; mute button

--- a/style.css
+++ b/style.css
@@ -39,3 +39,11 @@
     height: 98%;
     padding-left: 10%;
 }
+
+.gameButton{
+    position:absolute;
+    left:0%;
+    bottom:0%;
+    width: 10%;
+    height: 13%;
+}
