game area size increased; cross brwoser testing

--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
+html {
+    background: #000;
+}
+
 #gameArea {
     position:absolute;
     left:50%;
     top:50%;
-    border:1px solid;
 }
 
 .gameScreen {
-    border:2px solid #aaaaff;
     position:absolute;
     width:100%;
     height:100%;
 }
 .otherScreen {
-    border:2px solid #aaaaff;
     position:absolute;
     width:100%;
     height:100%;
